Fixing layout issues

--- a/src/assets/styles/cmps/StationList.scss
+++ b/src/assets/styles/cmps/StationList.scss
@@ -54,8 +54,8 @@
       height: 64px;
 	}
 	h1{
-		justify-self: center;
-		align-self: center;
+		// justify-self: center;
+		// align-self: center;
 	}
 	img {
 	width: 64px;
